# jni-gen

./: Cargo.toml
src/: lib.rs
tests/: tests.rs
